fixed size issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@ a{
 a:hover{
   border-bottom: 5px solid #bef4f2;
 }
+h3{
+  font-weight: 100;
+  padding-top:20vh;
+  padding-bottom:10vh;
+  font-size: 30px;
+  text-align: center;
+  margin: 0%;
+}
 h2{
   font-weight: 100;
   padding-top:5vh;
@@ -35,7 +43,7 @@ h2{
 }
 h1{
   margin: 10px 35%;
-  font-size: 30px;
+  font-size: 1.5em;
   border-bottom: 2px solid #bef4f2;
   text-align: center;
 }
@@ -56,7 +64,7 @@ header nav {
 }
 
 header ul {
-  margin-top: 30px;
+  margin-top: 20px;
   padding: 0;
   text-align: right;
 }
@@ -71,7 +79,6 @@ header li {
 /* --------------TOP SECTION------------- */
 .topSection{
   padding-top:5vh;
-  overflow:hidden;
 }
 /* ------ Main Image ------- */
 
@@ -101,32 +108,36 @@ header li {
 
 /*---------- Work ----------- */
 .work {
-  width: 45%;
-  margin: 20px;
+  width: 40%;
   height: 240px;
   float: left;
 }
 #workS{
-
+  width: 100%;
 }
 .corporate{
   background-image: url('../img/TE.jpg');
+  width: 50%;
 }
 .creative{
   background-image: url('../img/kahleo.png');
+  width:50%;
 }
 .creative,.corporate{
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 80% 100%;
 }
 .hoverTrans{
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  width: 40%;
+  height: inherit;
   background-color: black;
   opacity: 0.5;
   visibility: hidden;
+  margin-left: 5%;
 }
+
 .work:hover .hoverTrans{
   visibility: visible;
 }
@@ -138,7 +149,7 @@ header li {
   font-size: 50px;
   color: white;
   margin: 0;
-  padding-top:15%;
+  padding-top:20%;
   visibility: hidden;
 }
 .work a:hover p{
@@ -177,32 +188,29 @@ header li {
   text-align: center;
   padding-bottom:5vh;
 }
-#contact{
-
+#contact-form{
+text-align:center;
 }
-
 
 input {
   width: 65%;
   height: 50px;
-  margin: 2% 17.5%;
   font-size: 16px;
   border-left: none;
   border-right: none;
   border-top: none;
+  border-radius: 0;
 }
 
 textarea {
   width: 65%;
+  padding-top:5vh;
   height: 200px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   font-size: 16px;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  border-bottom:none;
+  border:none;
 
 }
 
@@ -252,14 +260,14 @@ button {
     display: none;
   }
   #about p {
-    font-size: 17px;
+    font-size: 1.9em;
   }
   .left{
     margin-left:15%;
   }
 }
-@media (min-width: 668px) and (max-width: 867px) {
-  .work{
+@media (min-width: 668px) and (max-width: 783px) {
+  /* .work{
     width: 100%;
     margin: 20px;
     height: 240px;
@@ -279,25 +287,25 @@ button {
   header nav {
     display: none;
   }
-  #about p {
-    font-size: 17px;
-  }
   .left{
     margin-left:15%;
   }
   .topSection{
     padding-top:0vh;
+  } */
+  
+  #about p {
+    font-size: 1.6em; 
   }
-
 }
 @media (min-width: 375px) and (max-width: 667px){
   header nav {
     display: none;
   }
   header h1{
-    width: 100%;
-  }
-  #contact{
+    width: 55%;
+    text-align: left;
+    font-size: 1em;
   }
   #about p {
     font-size: 1em;
@@ -331,5 +339,19 @@ button {
   }
   .work p{
     visibility: visible;
+    padding-top: 45%;
+    padding-left: 50%;
   }
+  h2{
+    padding-top:20vh;
+    padding-bottom: 5vh;
+  }
+  .creative, .corporate {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+header, footer{
+  font-size:2em;
+}
 }
